--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "test": "react-scripts test", 
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "ethers": "^5.7.2",
